2018-05-09  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): removed testing snippet, it
	contained text in Latin 1 encoding and current LaTeX defaults to
	utf8, causing a compilation errror.

	* Makefile: removed $(ht_fonts_devdir)/alias/bera/fvmr8r.htf, this file
	doesn't exist and it caused constant recompilations of font files. 

	* tex4ht-4ht.tex (usepackage.4ht): patch XeTeX active characters
	only in XeTeX compilation.

2018-05-08  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht): patch for expl3 package
	* tex4ht-4ht.tex (usepackage-fontspec.4ht, tuenc-xetex.4ht,
	tuenc-xetex-input.4ht): fixed XeTeX support.

2018-05-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html5.tex (html5.4ht): added declarations for
	additional languages supported by Polyglossia.
	* tex4ht-sty.tex (tex4ht.sty): load XeTeX encoding support code
	if XeTeX is active in order to support Unicode characters in the
	preamble.

2018-05-03  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (memoir.4ht): include code which was invoked only for
	mempatch.sty in memoir.4ht, since mempatch is not used anymore.

2018-05-02  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht): disabled package eso-pic, it
	cannot do anything useful under tex4ht.

2018-04-16  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex 
	(tex4ht.dir/texmf/tex4ht/ht-fonts/alias/arev/favb8r.htf):
	fixed reference to the master .htf file.

2018-04-10  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): removed \leavevmode from fbox
	configuration, it produced wrong results in the vertical mode.

	* tex4ht-4ht.tex (braket.4ht): patched the braket package, it
	produced wrong MathML code.

2018-04-06  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (biblatex.4ht): use \pend:defI for patching of
	\blx@bibliography in the current Biblatex version.N
	Report from Anonymous,